fix cursor on mobile

--- a/src/cursor/style.scss
+++ b/src/cursor/style.scss
@@ -7,4 +7,8 @@
     z-index: 99999;
     pointer-events: none;
     mix-blend-mode: difference;
+
+    @media not (hover: hover) {
+        display: none;
+    }
 }
